# Eldritch

./: .gitignore  readme.txt
Code/: CMakeLists.txt
Code/Libraries/2D/src/: 2d.h  asciirenderer.cpp  asciirenderer.h  asciisurface.cpp  asciisurface.h  sprite.cpp  sprite.h  spriteinstance.cpp  spriteinstance.h  spritemanager.cpp  spritemanager.h  surface.cpp  surface.h  surfacemanager.cpp  surfacemanager.h  tga.cpp  tga.h
Code/Libraries/3D/: CMakeLists.txt
Code/Libraries/3D/src/: 3d.cpp  3d.h  animation.cpp  animation.h  animationstate.cpp  animationstate.h  animevent.cpp  animevent.h  animeventfactory.cpp  animeventfactory.h  bonearray.cpp  bonearray.h  bucket.cpp  bucket.h  dynamicmeshmanager.cpp  dynamicmeshmanager.h  font.cpp  font.h  fontmanager.cpp  fontmanager.h  ibonemodifier.h  iindexbuffer.h  ipixelshader.h  irenderer.h  irendertarget.h  irradiancevolumes.cpp  irradiancevolumes.h  ishaderprogram.h  itexture.h  ivertexbuffer.h  ivertexdeclaration.h  ivertexshader.h  kdtree.cpp  kdtree.h  linebatcher.cpp  linebatcher.h  material.cpp  material.h  mesh.cpp  mesh.h  (+28 more)
Code/Libraries/Audio/: CMakeLists.txt
Code/Libraries/Audio/src/: audio.h  audiosystemcommon.cpp  musicmanager.cpp  openalaudiosystem.cpp  openalsound.cpp  openalsound.h  openalsoundinstance.cpp  openalsoundinstance.h  soloudaudiosystem.cpp  soundcommon.cpp  soundinstancecommon.cpp  stb_vorbis.c
Code/Libraries/Core/: CMakeLists.txt
Code/Libraries/Core/src/: allocator.cpp  allocator.h  allocatorchunk.cpp  allocatorchunk.h  array.h  arraystack.h  bmp-format.h  bufferedfilestream.cpp  bufferedfilestream.h  checksum.cpp  checksum.h  clock.cpp  clock.h  color.h  configmanager.cpp  configmanager.h  configparser.cpp  configparser.h  configvar.cpp  configvar.h  console.cpp  console.h  consoleinput.cpp  consoleinput.h  consolemanager.cpp  consolemanager.h  core.h  customassert.cpp  customassert.h  customnew.cpp  customnew.h  datapipe.cpp  datapipe.h  display.cpp  display.h  dynamicmemorystream.cpp  dynamicmemorystream.h  exceptionhandler.cpp  exceptionhandler.h  exceptiontrace.cpp  (+66 more)
Code/Libraries/Framework/: CMakeLists.txt
Code/Libraries/Framework/src/: checkforupdates.cpp  checkforupdates.h  framework3d.cpp  framework3d.h  frameworkutil.cpp  frameworkutil.h  uiinputmapframework.cpp  uiinputmapframework.h  uimanagerframework.cpp  uimanagerframework.h
Code/Libraries/GLEW/: CMakeLists.txt
Code/Libraries/GLEW/src/: glew.c
Code/Libraries/Math/: CMakeLists.txt
Code/Libraries/Math/src/: aabb.cpp  aabb.h  angles.cpp  angles.h  box2d.cpp  box2d.h  collisioninfo.cpp  collisioninfo.h  collisioninfo2d.cpp  collisioninfo2d.h  collisionmesh.cpp  collisionmesh.h  collisiontriangle.cpp  collisiontriangle.h  crypto.cpp  crypto.h  cylinder.cpp  cylinder.h  ellipsoid.cpp  ellipsoid.h  frustum.cpp  frustum.h  hsv.cpp  hsv.h  line.cpp  line.h  mathfunc.cpp  mathfunc.h  matrix.cpp  matrix.h  noise.cpp  noise.h  plane.cpp  plane.h  quat.cpp  quat.h  random.cpp  random.h  ray.cpp  ray.h  (+16 more)
Code/Libraries/Rodin/: CMakeLists.txt
Code/Libraries/Rodin/src/: irodinresourceuser.h  rodinbtnode.cpp  rodinbtnode.h  rodinbtnodefactory.cpp  rodinbtnodefactory.h  rodinbtnodes.h  rodinwbactions.h  rodinwbcomponents.h  rodinwbpes.h
Code/Libraries/SoLoud/: CMakeLists.txt
Code/Libraries/UI/: CMakeLists.txt
Code/Libraries/UI/src/: iuiinputmap.h  ui.h  uifactory.cpp  uifactory.h  uimanager.cpp  uimanager.h  uiscreen.cpp  uiscreen.h  uiscreens.h  uistack.cpp  uistack.h  uiwbactions.h  uiwidget.cpp  uiwidget.h  uiwidgets.h
Code/Libraries/Workbench/: CMakeLists.txt
Code/Libraries/Workbench/src/: iwbeventobserver.h  wbaction.cpp  wbaction.h  wbactionfactory.cpp  wbactionfactory.h  wbactions.h  wbactionstack.cpp  wbactionstack.h  wbcomponent.cpp  wbcomponent.h  wbcomponentarrays.cpp  wbcomponentarrays.h  wbcomponents.h  wbentity.cpp  wbentity.h  wbentityref.h  wbevent.cpp  wbevent.h  wbeventmanager.cpp  wbeventmanager.h  wbparamevaluator.cpp  wbparamevaluator.h  wbparamevaluatorfactory.cpp  wbparamevaluatorfactory.h  wbpatternmatching.cpp  wbpatternmatching.h  wbpe.cpp  wbpe.h  wbpes.h  wbrule.cpp  wbrule.h  wbscene.cpp  wbscene.h  wbworld.cpp  wbworld.h
Code/Libraries/zlib/: CMakeLists.txt
Code/Libraries/zlib/src/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  infback.c  inffast.c  inffixed.h  inflate.c  inflate.h  inftrees.c  inftrees.h  trees.c  trees.h  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
Code/Projects/Eld/: CMakeLists.txt
Code/Projects/Eld/src/: eldframework.cpp  eldgame.cpp  eldtargetmanager.cpp  eldworld.cpp  main.cpp
Code/Projects/Eldritch/: CMakeLists.txt  resource.h
Code/Projects/Eldritch/src/: eldritchanimevents.h  eldritchbank.cpp  eldritchbank.h  eldritchfactions.cpp  eldritchfactions.h  eldritchframework.cpp  eldritchframework.h  eldritchgame.cpp  eldritchgame.h  eldritchirradiance.cpp  eldritchirradiance.h  eldritchmesh.cpp  eldritchmesh.h  eldritchmusic.cpp  eldritchmusic.h  eldritchnav.cpp  eldritchnav.h  eldritchparticles.cpp  eldritchparticles.h  eldritchpersistence.cpp  eldritchpersistence.h  eldritchrodinbtnodes.h  eldritchroom.cpp  eldritchroom.h  eldritchsaveload.cpp  eldritchsaveload.h  eldritchsdps.h  eldritchsound3dlistener.cpp  eldritchsound3dlistener.h  eldritchtargetmanager.cpp  eldritchtargetmanager.h  eldritchtools.cpp  eldritchtools.h  eldritchuiscreens.h  eldritchwbactions.h  eldritchwbcomponents.h  eldritchwbpes.h  eldritchwbscenehelpers.cpp  eldritchwbscenehelpers.h  eldritchworld.cpp  (+7 more)
Code/Tools/Checksum/: CMakeLists.txt  resource.h
Code/Tools/Checksum/src/: main.cpp
Code/Tools/ConfigCompiler/: CMakeLists.txt  resource.h
Code/Tools/ConfigCompiler/src/: main.cpp
Code/Tools/ContentSyncer/: resource.h
Code/Tools/ContentSyncer/src/: main.cpp
Code/Tools/FilePacker/: CMakeLists.txt  resource.h
Code/Tools/FilePacker/src/: filepacker.cpp  filepacker.h  main.cpp
Code/Tools/FontGenerator/: resource.h
Code/Tools/FontGenerator/src/: main.cpp
Code/Tools/MeshCompiler/: CMakeLists.txt  resource.h
Code/Tools/MeshCompiler/src/: main.cpp  meshcompiler.cpp  (+1 more)
(+533 files in other folders)
