cmake_minimum_required(VERSION 2.8)

project(Eldritch)
include (FindPkgConfig)

option(PANDORA "Set to ON if targeting an OpenPandora device" ${PANDORA})
option(GLES "Set to ON if using GLES2 instead of desktop OpenGL" ${GLES})
option(TREMOR_ENABLED "Use Tremor instead of libvorbis for OpenAL" OFF)
option(DEBUG_ENABLED "Build a DEBUG version (if not, then it's a RELEASE version)" OFF)
option(FINAL_ENABLED "Build a FINAL version" OFF)

pkg_search_module(ALUT REQUIRED freealut)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -Wall")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

if(PANDORA)
	add_definitions(-DPANDORA)
endif()
if(GLES)
	add_definitions(-DHAVE_GLES)
endif()
if(TREMOR_ENABLED)
	add_definitions(-DUSE_TREMOR)
endif()
if(DEBUG_ENABLED)
	add_definitions(-D_DEBUG)
endif()
if(FINAL_ENABLED)
	add_definitions(-D_FINAL)
endif()
add_subdirectory(Libraries/Core/)
add_subdirectory(Libraries/Math/)
add_subdirectory(Libraries/2D/)
add_subdirectory(Libraries/3D/)
add_subdirectory(Libraries/Audio/)
add_subdirectory(Libraries/Workbench/)
add_subdirectory(Libraries/Rodin/)
add_subdirectory(Libraries/UI/)
add_subdirectory(Libraries/Framework/)
add_subdirectory(Projects/Eldritch/)
add_subdirectory(Tools/Checksum/)
add_subdirectory(Tools/ConfigCompiler/)
add_subdirectory(Tools/FilePacker/)
add_subdirectory(Tools/MeshCompiler/)
